--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         Things that get me excited about: health &amp; fitness and high-tech gadgets.
                     </p>
                 </section>
-                <section class="column-narrow">
+                <section class="column-narrow-left">
                     <h2>Contact<span class="triangle"></span></h2>
                     <ul class="contacts">
                         <li class="icon-phone">+359 894 526 569</li>
@@ -53,24 +53,40 @@
             <span id="up-arrow"></span>
         </header>
         <div id="main-content">
-           EDUCATION | EXPERIENCE
+            <div class="categories clearfix">
+                <span>EDUCATION</span>
+                <span style="float: right;">EXPERIENCE</span>
+            </div>
             <ol id="timeline">
-                <li class="2013 clearfix">
-                    <section class="column-narrow">
+                <li class="clearfix">
+                    <section class="column-narrow-right">
                         <h2>
-                            Contact
+                            Free agent
                             <span class="triangle"></span>
                             <span class="branch-lines"></span>
                         </h2>
-                        <p>A job description</p>
-                        <p>A job description</p>
-                        <p>A job description</p>
-                        <p>A job description</p>
+                        <p>Currently looking for the next great employer.</p>
+                        <p>Got any opened positions? Don't hesitate to contact me</p>
                     </section>
-                    <time>2013</time>
+                    <time>2014</time>
+                </li>
+                <li class="2013 clearfix">
+                    <section class="column-narrow-right">
+                        <h2>
+                            Web Dev Intern
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Bulgarian Academy of Science</p>
+                        <p>Jul'13 - Oct'13</p>
+                        <p>
+                            <a href="http://www.meteo.bg/en" target="_blank">http://www.meteo.bg/en</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2013</time>
                 </li>
                 <li class="2012 clearfix">
-                    <section class="column-narrow">
+                    <section class="column-narrow-left">
                         <h2>
                             Telerik Academy
                             <span class="triangle"></span>
@@ -80,11 +96,21 @@
                         <p>Telerik Software Academy</p>
                         <p>Oct'11 - Mar'12</p>
                         <p>[completed the basics courses]</p>
-                    </section>
-                    <time>2012</time>                    
+                    </section><!-- Removes trailing whitespace
+                 --><time>2012</time><!--                    
+                 --><section class="column-narrow-right">
+                        <h2>
+                            Print Operator
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Copy Partner Center, Sofia</p>
+                        <p>Apr'12 - May'12</p>
+                        <p>[part time]</p>
+                    </section> 
                 </li>
                 <li class="2011 clearfix">
-                    <section class="column-narrow">
+                    <section class="column-narrow-left">
                         <h2>
                             CPE in SU
                             <span class="triangle"></span>
@@ -94,9 +120,10 @@
                         <p>&amp; physics electronics</p>
                         <p>Sofia University</p>
                         <p>Sep'11 - Jun'15</p>
-                    </section>
-                    <time>2011</time>
-                    <section class="column-narrow">
+                    </section><!-- Removes trailing whitespace
+                 --><time>2011</time><!--
+                 --><br /> <!-- Secondary node(s)  -->
+                    <section class="column-narrow-left secondary-nodes">
                         <h2>
                             SS Graduate
                             <span class="triangle"></span>
