--- a/index.html
+++ b/index.html
@@ -26,123 +26,127 @@
         <![endif]-->
 
 
-    <div id="wrapper">
         <header class="clearfix">
-            <section id="profile-image"><img src="img/prf-img.png" alt="profile img"></section>
-            <div id="right">
-                <section id="profile-info">
-                    <h2>Who Am I<span class="triangle"></span></h2>
-                    <p>
-                        I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
-                        <strong>Front End Developer</strong>, currently living in
-                        <strong>Sofia, Bulgaria</strong>. I eagerly study
-                        <strong>communications &amp; electronics</strong> at <strong>Sofia University</strong>.
-                        Things that get me excited about: health &amp; fitness and high-tech gadgets.
-                    </p>
+            <div class="wrapper">
+                <section id="profile-image">
+                    <img src="img/prf-img.png" alt="profile img">
                 </section>
-                <section class="column-narrow-left">
-                    <h2>Contact<span class="triangle"></span></h2>
-                    <ul class="contacts">
-                        <li class="icon-phone">+359 894 526 569</li>
-                        <li class="icon-mail">rkunev@gmail.com</li>
-                        <li class="icon-skype">rosen.kanev1</li>
-                        <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
-                    </ul>
-                </section>
+                <div class="right-floated-container">
+                    <section id="profile-info">
+                        <h2>Who Am I<span class="triangle"></span></h2>
+                        <p>
+                            I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
+                            <strong>Front End Developer</strong>, currently living in
+                            <strong>Sofia, Bulgaria</strong>. I eagerly study
+                            <strong>communications &amp; electronics</strong> at <strong>Sofia University</strong>.
+                            Things that get me excited about: health &amp; fitness and high-tech gadgets.
+                        </p>
+                    </section>
+                    <section class="column-narrow-left">
+                        <h2>Contact<span class="triangle"></span></h2>
+                        <ul class="contacts">
+                            <li class="icon-phone">+359 894 526 569</li>
+                            <li class="icon-mail">rkunev@gmail.com</li>
+                            <li class="icon-skype">rosen.kanev1</li>
+                            <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
+                        </ul>
+                    </section>
+                </div>
             </div>
             <span id="up-arrow"></span>
         </header>
         <div id="main-content">
-            <div class="categories clearfix">
-                <span>EDUCATION</span>
-                <span style="float: right;">EXPERIENCE</span>
+            <div class="wrapper">
+                <div class="categories clearfix">
+                    <span>EDUCATION</span>
+                    <span class="right-floated-container">EXPERIENCE</span>
+                </div>
+                <ol id="timeline">
+                    <li class="clearfix">
+                        <section class="column-narrow-right">
+                            <h2>
+                                Free agent
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Currently looking for the next great employer.</p>
+                            <p>Got any opened positions? Don't hesitate to contact me</p>
+                        </section>
+                        <time>2014</time>
+                    </li>
+                    <li class="2013 clearfix">
+                        <section class="column-narrow-right">
+                            <h2>
+                                Web Dev Intern
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Bulgarian Academy of Science</p>
+                            <p>Jul'13 - Oct'13</p>
+                            <p>
+                                <a href="http://www.meteo.bg/en" target="_blank">http://www.meteo.bg/en</a>
+                            </p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2013</time>
+                    </li>
+                    <li class="2012 clearfix">
+                        <section class="column-narrow-left">
+                            <h2>
+                                Telerik Academy
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Software engineer trainee,</p>
+                            <p>Telerik Software Academy</p>
+                            <p>Oct'11 - Mar'12</p>
+                            <p>[completed the basics courses]</p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2012</time><!--                    
+                     --><section class="column-narrow-right">
+                            <h2>
+                                Print Operator
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Copy Partner Center, Sofia</p>
+                            <p>Apr'12 - May'12</p>
+                            <p>[part time]</p>
+                        </section> 
+                    </li>
+                    <li class="2011 clearfix">
+                        <section class="column-narrow-left">
+                            <h2>
+                                CPE in SU
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Communication</p>
+                            <p>&amp; physics electronics</p>
+                            <p>Sofia University</p>
+                            <p>Sep'11 - Jun'15</p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2011</time><!--
+                     --><br /> <!-- Secondary node(s)  -->
+                        <section class="column-narrow-left secondary-nodes">
+                            <h2>
+                                SS Graduate
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>GPA: 5.64 out of 6.00</p>
+                            <p>"Karavelov" secondary school</p>
+                            <p>Sep'07 - Jun'11</p>
+                        </section>
+                    </li>
+                </ol>
+            <br /> some more content
+            <br /> some more content
+            <br /> some more content
+            <br /> some more content
+            <br /> some more content
+            <br /> some more content
             </div>
-            <ol id="timeline">
-                <li class="clearfix">
-                    <section class="column-narrow-right">
-                        <h2>
-                            Free agent
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Currently looking for the next great employer.</p>
-                        <p>Got any opened positions? Don't hesitate to contact me</p>
-                    </section>
-                    <time>2014</time>
-                </li>
-                <li class="2013 clearfix">
-                    <section class="column-narrow-right">
-                        <h2>
-                            Web Dev Intern
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Bulgarian Academy of Science</p>
-                        <p>Jul'13 - Oct'13</p>
-                        <p>
-                            <a href="http://www.meteo.bg/en" target="_blank">http://www.meteo.bg/en</a>
-                        </p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2013</time>
-                </li>
-                <li class="2012 clearfix">
-                    <section class="column-narrow-left">
-                        <h2>
-                            Telerik Academy
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Software engineer trainee,</p>
-                        <p>Telerik Software Academy</p>
-                        <p>Oct'11 - Mar'12</p>
-                        <p>[completed the basics courses]</p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2012</time><!--                    
-                 --><section class="column-narrow-right">
-                        <h2>
-                            Print Operator
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Copy Partner Center, Sofia</p>
-                        <p>Apr'12 - May'12</p>
-                        <p>[part time]</p>
-                    </section> 
-                </li>
-                <li class="2011 clearfix">
-                    <section class="column-narrow-left">
-                        <h2>
-                            CPE in SU
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Communication</p>
-                        <p>&amp; physics electronics</p>
-                        <p>Sofia University</p>
-                        <p>Sep'11 - Jun'15</p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2011</time><!--
-                 --><br /> <!-- Secondary node(s)  -->
-                    <section class="column-narrow-left secondary-nodes">
-                        <h2>
-                            SS Graduate
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>GPA: 5.64 out of 6.00</p>
-                        <p>"Karavelov" secondary school</p>
-                        <p>Sep'07 - Jun'11</p>
-                    </section>
-                </li>
-            </ol>
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
         </div>
-    </div>
 
 
 
