html: skills-tree is completely rewritten (added a parrent wrapper to span circles, using data-percentage to select proper circles; css: changed fonts (new issues in chrome), #skills layout is completed

--- a/index.html
+++ b/index.html
@@ -139,14 +139,56 @@
                         </section>
                     </li>
                 </ol>
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
+                <div class="categories clearfix">
+                    <span>SKILLS</span>
+                </div>
+                <ul id="skills" class="clearfix">
+                    <li>
+                        <div>
+                            <span id="test" data-percentage="85"></span>
+                            <span>85%</span>
+                        </div>
+                        <p>Front-End</p>
+                        <p>(HTML5, CSS3, responsive layouts)</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="75" class="circle"></span>
+                            <span>75%</span>
+                        </div>
+                        <p>Adobe Apps</p>
+                        <p>(Photoshop, Illustrator, After Effects</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="50" class="circle"></span>
+                            <span>50%</span>
+                        </div>
+                        <p>Programming</p>
+                        <p>(jQuery, Angular, Javascript, C#)</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="50" class="circle"></span>
+                            <span>50%</span>
+                        </div>
+                        <p>Other</p>
+                        <p>Git, Wordpress, node.js</p>
+                    </li>
+                </ul>
             </div>
         </div>
+        <footer>
+            <div class="wrapper">
+                <h1>
+                    footer
+                </h1>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+        </footer>
 
 
 
