added footer; minor layout changes; minor code refactor in main.css

--- a/index.html
+++ b/index.html
@@ -180,13 +180,20 @@
         </div>
         <footer>
             <div class="wrapper">
-                <h1>
-                    footer
-                </h1>
-                <br>
-                <br>
-                <br>
-                <br>
+                <div class="categories clearfix">
+                    <div>
+                        <h2>LANGUAGE</h2>
+                        <h3>English (4 out 5)</h3>
+                        <h3>Bulgarian (5 out 5)</h3>
+                    </div>
+                    <div class="right-floated-container">
+                        <h2>HOBBIES &amp; ACTIVITIES</h2>
+                        <p>
+                            open source enthusiastic, music addict, coffee addict,
+                            android admirer, flat ui lover
+                        </p>
+                    </div>
+                </div>
             </div>
         </footer>
 
