--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if IE 10]>        <html class="no-js ie10"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
-    <!-- <meta http-equiv="refresh" content="5" > -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Flat CV</title>
-    <meta name="description" content="">
+    <meta name="description" content="Flat UI CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/ie8.css" type="text/css">
 
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -25,7 +26,6 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
 
         <header>
             <div class="wrapper clearfix">
@@ -203,18 +203,10 @@
             </div>
         </footer>
 
-
-
-
-
-
-
-
     <!--        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
     </script>
-
     <script src="js/main.js"></script>
 </body>
 
