--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if IE 10]>        <html class="no-js ie10"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
-    <!-- <meta http-equiv="refresh" content="5" > -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
+    <title>Flat CV</title>
+    <meta name="description" content="Flat UI CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/ie8.css" type="text/css">
 
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -25,137 +27,186 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
-    <div id="wrapper">
-        <header class="clearfix">
-            <section id="profile-image"><img src="img/prf-img.png" alt="profile img"></section>
-            <div id="right">
-                <section id="profile-info">
-                    <h2>Who Am I<span class="triangle"></span></h2>
-                    <p>
-                        I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
-                        <strong>Front End Developer</strong>, currently living in
-                        <strong>Sofia, Bulgaria</strong>. I eagerly study
-                        <strong>communications &amp; electronics</strong> at <strong>Sofia University</strong>.
-                        Things that get me excited about: health &amp; fitness and high-tech gadgets.
-                    </p>
+        <header>
+            <div class="wrapper clearfix">
+                <section id="profile-image">
+                    <img src="img/prf-img.png" alt="profile img">
                 </section>
-                <section class="column-narrow-left">
-                    <h2>Contact<span class="triangle"></span></h2>
-                    <ul class="contacts">
-                        <li class="icon-phone">+359 894 526 569</li>
-                        <li class="icon-mail">rkunev@gmail.com</li>
-                        <li class="icon-skype">rosen.kanev1</li>
-                        <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
-                    </ul>
-                </section>
+                <div class="right-floated-container">
+                    <section id="profile-info">
+                        <h2>Who Am I<span class="triangle"></span></h2>
+                        <p>
+                            I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
+                            <strong>Front End Developer</strong>, currently living in
+                            <strong>Sofia, Bulgaria</strong>. I eagerly study
+                            <strong>communications &amp; electronics</strong> at <strong>Sofia University</strong>.
+                            Things that get me excited about: health &amp; fitness and high-tech gadgets.
+                        </p>
+                    </section>
+                    <section class="column-narrow-left">
+                        <h2>Contact<span class="triangle"></span></h2>
+                        <ul class="contacts">
+                            <li class="icon-phone">+359 877 888 349</li>
+                            <li class="icon-mail">rkunev@gmail.com</li>
+                            <li class="icon-skype">rosen.kanev1</li>
+                            <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
+                        </ul>
+                    </section>
+                </div>
+                <span id="up-arrow"></span>
             </div>
-            <span id="up-arrow"></span>
         </header>
         <div id="main-content">
-            <div class="categories clearfix">
-                <span>EDUCATION</span>
-                <span style="float: right;">EXPERIENCE</span>
+            <div class="wrapper">
+                <div class="categories clearfix">
+                    <span>EDUCATION</span>
+                    <span class="right-floated-container">EXPERIENCE</span>
+                </div>
+                <ol id="timeline">
+                    <li class="clearfix">
+                        <section class="column-narrow-right">
+                            <h2>
+                                Free agent
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Currently looking for the next great employer.</p>
+                            <p>Got any opened positions? Don't hesitate to contact me</p>
+                        </section>
+                        <time>2014</time>
+                    </li>
+                    <li class="clearfix">
+                        <section class="column-narrow-right">
+                            <h2>
+                                Web Dev Intern
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Bulgarian Academy of Science</p>
+                            <p>Jul'13 - Oct'13</p>
+                            <p>
+                                <a href="http://www.meteo.bg/en" target="_blank">meteo.bg</a>
+                            </p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2013</time>
+                    </li>
+                    <li class="clearfix">
+                        <section class="column-narrow-left">
+                            <h2>
+                                Telerik Academy
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Software engineer trainee,</p>
+                            <p>Telerik Software Academy</p>
+                            <p>Oct'11 - Mar'12</p>
+                            <p>[completed the basics courses]</p>
+                            <p>
+                                <a href="http://academy.telerik.com/" target="_blank">Telerik Academy</a>
+                            </p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2012</time><!--                    
+                     --><section class="column-narrow-right">
+                            <h2>
+                                Print Operator
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Copy Partner Center, Sofia</p>
+                            <p>Apr'12 - May'12</p>
+                            <p>[part time]</p>
+                        </section> 
+                    </li>
+                    <li class="clearfix">
+                        <section class="column-narrow-left">
+                            <h2>
+                                UG in SU
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>Undergraduate in Communication</p>
+                            <p>&amp; physics electronics</p>
+                            <p>Sep'11 - Jun'15</p>
+                            <p>
+                                <a href="https://www.uni-sofia.bg/index.php/eng" target="_blank">Sofia University</a>
+                            </p>
+                        </section><!-- Removes trailing whitespace
+                     --><time>2011</time><!--
+                     --><br /> <!-- Secondary node(s)  -->
+                        <section class="column-narrow-left secondary-nodes">
+                            <h2>
+                                SS Graduate
+                                <span class="triangle"></span>
+                                <span class="branch-lines"></span>
+                            </h2>
+                            <p>GPA: 5.64 out of 6.00</p>
+                            <p>"Karavelov" secondary school</p>
+                            <p>Sep'07 - Jun'11</p>
+                        </section>
+                    </li>
+                </ol>
+                <div class="categories clearfix">
+                    <span>SKILLS</span>
+                </div>
+                <ul id="skills" class="clearfix">
+                    <li>
+                        <div>
+                            <span data-percentage="85"></span>
+                            <span>85%</span>
+                        </div>
+                        <p>Front-End</p>
+                        <p>(HTML5, CSS3, responsive layouts)</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="75"></span>
+                            <span>75%</span>
+                        </div>
+                        <p>Adobe Apps</p>
+                        <p>(Photoshop, Illustrator, After Effects</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="50"></span>
+                            <span>50%</span>
+                        </div>
+                        <p>Programming</p>
+                        <p>(jQuery, Angular, Javascript, C#)</p>
+                    </li>
+                    <li>
+                        <div>
+                            <span data-percentage="50"></span>
+                            <span>50%</span>
+                        </div>
+                        <p>Other</p>
+                        <p>Git, Wordpress, node.js</p>
+                    </li>
+                </ul>
             </div>
-            <ol id="timeline">
-                <li class="clearfix">
-                    <section class="column-narrow-right">
-                        <h2>
-                            Free agent
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Currently looking for the next great employer.</p>
-                        <p>Got any opened positions? Don't hesitate to contact me</p>
-                    </section>
-                    <time>2014</time>
-                </li>
-                <li class="2013 clearfix">
-                    <section class="column-narrow-right">
-                        <h2>
-                            Web Dev Intern
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Bulgarian Academy of Science</p>
-                        <p>Jul'13 - Oct'13</p>
-                        <p>
-                            <a href="http://www.meteo.bg/en" target="_blank">http://www.meteo.bg/en</a>
-                        </p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2013</time>
-                </li>
-                <li class="2012 clearfix">
-                    <section class="column-narrow-left">
-                        <h2>
-                            Telerik Academy
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Software engineer trainee,</p>
-                        <p>Telerik Software Academy</p>
-                        <p>Oct'11 - Mar'12</p>
-                        <p>[completed the basics courses]</p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2012</time><!--                    
-                 --><section class="column-narrow-right">
-                        <h2>
-                            Print Operator
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Copy Partner Center, Sofia</p>
-                        <p>Apr'12 - May'12</p>
-                        <p>[part time]</p>
-                    </section> 
-                </li>
-                <li class="2011 clearfix">
-                    <section class="column-narrow-left">
-                        <h2>
-                            CPE in SU
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>Communication</p>
-                        <p>&amp; physics electronics</p>
-                        <p>Sofia University</p>
-                        <p>Sep'11 - Jun'15</p>
-                    </section><!-- Removes trailing whitespace
-                 --><time>2011</time><!--
-                 --><br /> <!-- Secondary node(s)  -->
-                    <section class="column-narrow-left secondary-nodes">
-                        <h2>
-                            SS Graduate
-                            <span class="triangle"></span>
-                            <span class="branch-lines"></span>
-                        </h2>
-                        <p>GPA: 5.64 out of 6.00</p>
-                        <p>"Karavelov" secondary school</p>
-                        <p>Sep'07 - Jun'11</p>
-                    </section>
-                </li>
-            </ol>
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
-            <br /> some more content
         </div>
-    </div>
-
-
-
-
-
-
-
+        <footer>
+            <div class="wrapper">
+                <div class="categories clearfix">
+                    <div>
+                        <h2>LANGUAGE</h2>
+                        <h3>English (4 out 5)</h3>
+                        <h3>Bulgarian (5 out 5)</h3>
+                    </div>
+                    <div class="right-floated-container">
+                        <h2>HOBBIES &amp; ACTIVITIES</h2>
+                        <p>
+                            open source enthusiastic, music addict, coffee addict,
+                            android admirer, flat ui lover
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     <!--        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
     </script>
-
     <script src="js/main.js"></script>
 </body>
 
