Replace .png icons for .svg. Update content

--- a/index.html
+++ b/index.html
@@ -24,190 +24,232 @@
 
 <body>
     <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-        <header>
-            <div class="wrapper clearfix">
-                <section id="profile-image">
-                    <img src="img/prf-img.png" alt="profile img">
+    <header class="site-header">
+        <div class="wrapper clearfix">
+            <section id="profile-image">
+                <img src="img/prf-img.png" alt="profile image">
+            </section>
+            <div class="right-floated-container">
+                <section id="profile-info">
+                    <h2>Who Am I<span class="triangle"></span></h2>
+                    <p>
+                        I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
+                        <strong>Front End Developer</strong>, currently living in
+                        <strong>Sofia, Bulgaria</strong>.
+                    </p>
+                    <p>
+                        Graduated <strong>Communications &amp; Electronics</strong> at <strong>Sofia University</strong>.
+                        Things that get me excited about: health &amp; fitness and high-tech gadgets.
+                    </p>
                 </section>
-                <div class="right-floated-container">
-                    <section id="profile-info">
-                        <h2>Who Am I<span class="triangle"></span></h2>
+                <section class="column-narrow-left">
+                    <h2>Contact<span class="triangle"></span></h2>
+                    <ul class="contacts">
+                        <li class="icon-phone">+359 877 888 349</li>
+                        <li class="icon-mail">rkunev@gmail.com</li>
+                        <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
+                    </ul>
+                </section>
+            </div>
+            <span id="up-arrow"></span>
+        </div>
+    </header>
+
+    <main id="main-content" role="main">
+        <div class="wrapper">
+            <div class="categories clearfix">
+                <span>EDUCATION</span>
+                <span class="right-floated-container">EXPERIENCE</span>
+            </div>
+            <ol id="timeline">
+                <li class="clearfix">
+                    <section class="column-narrow-right">
+                        <h2>
+                            Free agent
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Currently looking for the next great employer.</p>
+                        <p>Got any opened positions? Don't hesitate to contact me</p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2016</time>
+                </li>
+                <li class="clearfix">
+                    <section class="column-narrow-left">
+                        <h2>
+                            Graduated SU
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Graduated Sofia University,</p>
+                        <p>Sep'11 - Jun'15</p>
                         <p>
-                            I am <strong>Rosen Kunev</strong>. I am your friendly neighbourhood
-                            <strong>Front End Developer</strong>, currently living in
-                            <strong>Sofia, Bulgaria</strong>. I eagerly study
-                            <strong>communications &amp; electronics</strong> at <strong>Sofia University</strong>.
-                            Things that get me excited about: health &amp; fitness and high-tech gadgets.
+                            <a href="http://academy.telerik.com/" target="_blank">Telerik Academy</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2015</time>
+                    <section class="column-narrow-right">
+                        <h2>
+                            Front-End Dev
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Cobweb Software</p>
+                        <p>Feb'15 - Dec'15</p>
+                        <p>
+                            <a href="http://cobweb.biz" target="_blank">cobweb.biz</a>
                         </p>
                     </section>
+                </li>
+                <li class="clearfix">
+                    <section class="column-narrow-right">
+                        <h2>
+                            Front-End Intern
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Cobweb Software</p>
+                        <p>Oct'14 - Feb'15</p>
+                        <p>
+                            <a href="http://cobweb.biz" target="_blank">cobweb.biz</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2014</time>
+                </li>
+                <li class="clearfix">
+                    <section class="column-narrow-right">
+                        <h2>
+                            Web Dev Intern
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Bulgarian Academy of Science</p>
+                        <p>Jul'13 - Oct'13</p>
+                        <p>
+                            <a href="http://www.meteo.bg/en" target="_blank">meteo.bg</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2013</time>
+                </li>
+                <li class="clearfix">
                     <section class="column-narrow-left">
-                        <h2>Contact<span class="triangle"></span></h2>
-                        <ul class="contacts">
-                            <li class="icon-phone">+359 877 888 349</li>
-                            <li class="icon-mail">rkunev@gmail.com</li>
-                            <li class="icon-skype">rosen.kanev1</li>
-                            <li class="icon-code"><a href="https://github.com/rkunev" target="_blank">github.com/rkunev</a></li>
-                        </ul>
+                        <h2>
+                            Telerik Academy
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Software engineer trainee,</p>
+                        <p>Telerik Software Academy</p>
+                        <p>Oct'11 - Mar'12</p>
+                        <p>[completed the basics courses]</p>
+                        <p>
+                            <a href="http://academy.telerik.com/" target="_blank">Telerik Academy</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2012</time><!--
+                 --><section class="column-narrow-right">
+                        <h2>
+                            Print Operator
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Copy Partner Center, Sofia</p>
+                        <p>Apr'12 - May'12</p>
+                        <p>[part time]</p>
                     </section>
-                </div>
-                <span id="up-arrow"></span>
+                </li>
+                <li class="clearfix">
+                    <section class="column-narrow-left">
+                        <h2>
+                            UG in SU
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>Undergraduate in Communication</p>
+                        <p>&amp; physics electronics</p>
+                        <p>Sep'11 - Jun'15</p>
+                        <p>
+                            <a href="https://www.uni-sofia.bg/index.php/eng" target="_blank">Sofia University</a>
+                        </p>
+                    </section><!-- Removes trailing whitespace
+                 --><time>2011</time><!--
+                 --><br /> <!-- Secondary node(s)  -->
+                    <section class="column-narrow-left secondary-nodes">
+                        <h2>
+                            SS Graduate
+                            <span class="triangle"></span>
+                            <span class="branch-lines"></span>
+                        </h2>
+                        <p>GPA: 5.64 out of 6.00</p>
+                        <p>"Karavelov" secondary school</p>
+                        <p>Sep'07 - Jun'11</p>
+                    </section>
+                </li>
+            </ol>
+            <div class="categories clearfix">
+                <span>SKILLS</span>
             </div>
-        </header>
-        <div id="main-content">
-            <div class="wrapper">
-                <div class="categories clearfix">
-                    <span>EDUCATION</span>
-                    <span class="right-floated-container">EXPERIENCE</span>
+            <ul id="skills" class="clearfix">
+                <li>
+                    <div>
+                        <span data-percentage="100"></span>
+                        <span>100%</span>
+                    </div>
+                    <p>Front-End</p>
+                    <p>(HTML5, CSS3, Responsive design)</p>
+                </li>
+                <li>
+                    <div>
+                        <span data-percentage="85"></span>
+                        <span>85%</span>
+                    </div>
+                    <p>Programming</p>
+                    <p>(AngularJS, JavaScript, PHP, C#)</p>
+                </li>
+                <li>
+                    <div>
+                        <span data-percentage="75"></span>
+                        <span>75%</span>
+                    </div>
+                    <p>Other</p>
+                    <p>(Wordpress, Joomla, Git, Google Maps API)</p>
+                </li>
+                <li>
+                    <div>
+                        <span data-percentage="50"></span>
+                        <span>50%</span>
+                    </div>
+                    <p>Adobe Apps</p>
+                    <p>(Photoshop, Illustrator, After Effects)</p>
+                </li>
+            </ul>
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        <div class="wrapper">
+            <div class="categories clearfix">
+                <div>
+                    <h2>LANGUAGES</h2>
+                    <h3>English (4 out 5)</h3>
+                    <h3>Bulgarian (5 out 5)</h3>
                 </div>
-                <ol id="timeline">
-                    <li class="clearfix">
-                        <section class="column-narrow-right">
-                            <h2>
-                                Free agent
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>Currently looking for the next great employer.</p>
-                            <p>Got any opened positions? Don't hesitate to contact me</p>
-                        </section>
-                        <time>2014</time>
-                    </li>
-                    <li class="clearfix">
-                        <section class="column-narrow-right">
-                            <h2>
-                                Web Dev Intern
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>Bulgarian Academy of Science</p>
-                            <p>Jul'13 - Oct'13</p>
-                            <p>
-                                <a href="http://www.meteo.bg/en" target="_blank">meteo.bg</a>
-                            </p>
-                        </section><!-- Removes trailing whitespace
-                     --><time>2013</time>
-                    </li>
-                    <li class="clearfix">
-                        <section class="column-narrow-left">
-                            <h2>
-                                Telerik Academy
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>Software engineer trainee,</p>
-                            <p>Telerik Software Academy</p>
-                            <p>Oct'11 - Mar'12</p>
-                            <p>[completed the basics courses]</p>
-                            <p>
-                                <a href="http://academy.telerik.com/" target="_blank">Telerik Academy</a>
-                            </p>
-                        </section><!-- Removes trailing whitespace
-                     --><time>2012</time><!--                    
-                     --><section class="column-narrow-right">
-                            <h2>
-                                Print Operator
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>Copy Partner Center, Sofia</p>
-                            <p>Apr'12 - May'12</p>
-                            <p>[part time]</p>
-                        </section> 
-                    </li>
-                    <li class="clearfix">
-                        <section class="column-narrow-left">
-                            <h2>
-                                UG in SU
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>Undergraduate in Communication</p>
-                            <p>&amp; physics electronics</p>
-                            <p>Sep'11 - Jun'15</p>
-                            <p>
-                                <a href="https://www.uni-sofia.bg/index.php/eng" target="_blank">Sofia University</a>
-                            </p>
-                        </section><!-- Removes trailing whitespace
-                     --><time>2011</time><!--
-                     --><br /> <!-- Secondary node(s)  -->
-                        <section class="column-narrow-left secondary-nodes">
-                            <h2>
-                                SS Graduate
-                                <span class="triangle"></span>
-                                <span class="branch-lines"></span>
-                            </h2>
-                            <p>GPA: 5.64 out of 6.00</p>
-                            <p>"Karavelov" secondary school</p>
-                            <p>Sep'07 - Jun'11</p>
-                        </section>
-                    </li>
-                </ol>
-                <div class="categories clearfix">
-                    <span>SKILLS</span>
+                <div class="right-floated-container">
+                    <h2>HOBBIES &amp; ACTIVITIES</h2>
+                    <p>
+                        open source enthusiastic, music addict, coffee addict,
+                        android admirer, flat ui &amp; material ui lover
+                    </p>
                 </div>
-                <ul id="skills" class="clearfix">
-                    <li>
-                        <div>
-                            <span data-percentage="85"></span>
-                            <span>85%</span>
-                        </div>
-                        <p>Front-End</p>
-                        <p>(HTML5, CSS3, responsive layouts)</p>
-                    </li>
-                    <li>
-                        <div>
-                            <span data-percentage="75"></span>
-                            <span>75%</span>
-                        </div>
-                        <p>Adobe Apps</p>
-                        <p>(Photoshop, Illustrator, After Effects</p>
-                    </li>
-                    <li>
-                        <div>
-                            <span data-percentage="50"></span>
-                            <span>50%</span>
-                        </div>
-                        <p>Programming</p>
-                        <p>(jQuery, Angular, Javascript, C#)</p>
-                    </li>
-                    <li>
-                        <div>
-                            <span data-percentage="50"></span>
-                            <span>50%</span>
-                        </div>
-                        <p>Other</p>
-                        <p>Git, Wordpress, node.js</p>
-                    </li>
-                </ul>
             </div>
         </div>
-        <footer>
-            <div class="wrapper">
-                <div class="categories clearfix">
-                    <div>
-                        <h2>LANGUAGE</h2>
-                        <h3>English (4 out 5)</h3>
-                        <h3>Bulgarian (5 out 5)</h3>
-                    </div>
-                    <div class="right-floated-container">
-                        <h2>HOBBIES &amp; ACTIVITIES</h2>
-                        <p>
-                            open source enthusiastic, music addict, coffee addict,
-                            android admirer, flat ui lover
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-
-    <!--        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
+    </footer>
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
     </script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
