Updated README. Removed unused deps

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
     <meta name="description" content="Flat UI CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/normalize.min.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/ie8.css" type="text/css">
-
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 
 <body>
-    <!--[if lt IE 7]>
+    <!--[if lt IE 8]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
@@ -248,7 +246,7 @@
         </div>
     </footer>
     <script>
-        window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')
+        // window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>');
     </script>
 </body>
 
